<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/list_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:onClick="backBtn"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/calender_txt"
            android:textSize="25sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/currentMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btnBefore"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/next_drwable"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:onClick="onClickBefore"
            android:text="@string/arrow_back"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/next_drwable"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:onClick="onClickNext"
            android:text="@string/arrow_next"
            android:textColor="#000"
            android:textSize="20sp"

            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:gravity="center" />
    <TimePicker
        android:id="@+id/simpleTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_gravity="center"/>
</LinearLayout>